--- a/tetris.ini
+++ b/tetris.ini
@@ -1,13 +1,10 @@
 [uwsgi]
 module = wsgi:app
-
 master = true
 processes = 5
-
+http-websockets = true
+buffer-size=32768
 socket = tetris.sock
 chmod-socket = 666
 vacuum = true
-
-lazy-apps = true
-
 die-on-term = true
